# frozone

./: .clang-format  .gitignore  .gitlab-ci.yml  Doxyfile  LICENSE  README.md  Rapport_ServerFreezer_APPING2022.rst  Vagrantfile  meson.build
OpenBSD/: carto.c
builder/: Dockerfile_ubuntu2104_gcc  Dockerfile_ubuntu_gcc  Makefile  README.md
carto/: meson.build
carto/include/: carto.h
carto/src/: carto.c  carto.h  connections.c  connections.h  meson.build  processes.c  processes.h  users.c  users.h  utils.c  utils.h
carto/src/tests/: main.c  meson.build  test_utils.c  test_utils.h
carto/tests/: main.c  meson.build  test.c  test.h
examples/: demo.c  demo_carto.c  demo_freezer.c  meson.build
freezer/: .gitlab-ci.yml  Makefile  README.md  Vagrantfile  array.c  array.h  freezer.c  freezer.h  freezer_hook.c  freezer_hook.h  freezer_netlink.c  netlink_u.c  resource_com.h  user_netlink.c  user_netlink.h  vagrant_init.sh
freezer/lib/: freezer.c  freezer.h  meson.build  resource_com.h  user_netlink.c  user_netlink.h
freezer/module/: Kbuild  Makefile  array.c  array.h  freezer_hook.c  freezer_hook.h  freezer_hook_utils.c  freezer_hook_utils.h  freezer_netlink.c  meson.build  meson_get_kversion.sh
freezer/tests/: main.c  meson.build  test_freezer.c  test_freezer.h
openbsd/: carto.c  carto.h  meson.build  users.h  utils.h
rapport/: Rapport_ServerFreezer_APPING2022.rst
security/: README.md  carto_module.yaml  freezer_module.yaml  pretty_printer_semgrep.py
tests/: main.c  meson.build  test_carto.c  test_carto.h
vagrant/: vagrant_init_debian.sh  vagrant_init_ubuntu.sh
